@@ -1,4 +1,6 @@
 HEAD
+	+ Don't update alias group list when it could trigger problems
+	  with maibox related classes
 	+ Postfix handles Zentyal distribution groups virtual alias
 3.2.8
 	+ Better integration between mail addon and mail field
